--- a/src/main/resources/templates/fragments/menu-fragment.html
+++ b/src/main/resources/templates/fragments/menu-fragment.html
@@ -38,7 +38,7 @@
                     <a class="block bg-gray-200 p-3 pl-5 hover:bg-gray-400 border-b border-gray-400"
                        th:if="${user.publisherAccess()}" th:href="@{/user/file}">File Upload</a>
                     <th:block th:if="${user.admin}">
-                        <div class="bg-gray-200 p-3 pl-5 bg-black text-white">Administration</div>
+                        <div class="p-3 pl-5 bg-black text-white">Administration</div>
                         <a class="block bg-gray-200 p-3 pl-5 hover:bg-gray-400 border-b border-gray-400"
                            th:href="@{/admin/user}">User</a>
                     </th:block>
